Finished Final product, with new backgrounds for temperatures & broke down project file structure

--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,14 @@ body {
   background-image: url('./assets/cold-bg.jpg');
   background-size: cover;
   background-position: bottom;
-  transition: 0.4 ease-out;
+  transition: 0.4s ease-out;
 }
 
 .app.warm {
   background-image: url('./assets/warm-bg.jpg');
   background-size: cover;
   background-position: bottom;
-  transition: 0.4 ease-out;
+  transition: 0.4s ease-out;
 }
 
 main {
@@ -44,8 +44,7 @@ main {
   outline: none;
 
   background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 0px 0px 16px 16px;
-  margin-top: -25px;
+  border-radius: 16px 16px 16px 16px;
 
   box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
   
